examples/v1.0.0/commons/clean/ts/invalid/clean.receipt.invalid.2.ts
// INVALID clean.receipt #2 — missing result when status=success

export const cleanReceiptInvalid2: any = {
  x402: {
    verb: "clean",
    version: "1.0.0",
    request_id: "req-clean-2025-11-19-0005"
  },
  trace: {
    trace_id: "trace-clean-0005"
  },
  status: "success"
};
